// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <SwitchField> inside a Form 1`] = `
<DocumentFragment>
  <form
    id="switchForm.form"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root-1"
      >
        <div
          class="MuiFormControl-root CoSwitchField-formControlRoot-2"
        >
          <label
            class="MuiFormControlLabel-root"
          >
            <span
              class="MuiSwitch-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-3 MuiSwitch-switchBase MuiSwitch-colorSecondary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-6 MuiSwitch-input"
                    id="switchForm.form.abc"
                    name="switchForm.form.abc"
                    type="checkbox"
                    value=""
                  />
                  <span
                    class="MuiSwitch-thumb"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiSwitch-track"
              />
            </span>
            <span
              class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
            >
              Example Editor
            </span>
          </label>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`should render <SwitchField> inside a FormView 1`] = `
<DocumentFragment>
  <form
    id="switchFormView.form"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation3 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root-7"
      >
        <div
          class="MuiBox-root MuiBox-root-8"
        >
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root-9"
              >
                <div
                  class="MuiFormControl-root CoSwitchField-formControlRoot-10"
                >
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      class="MuiSwitch-root"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-11 MuiSwitch-switchBase MuiSwitch-colorSecondary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            class="PrivateSwitchBase-input-14 MuiSwitch-input"
                            id="switchFormView.form.abc"
                            name="switchFormView.form.abc"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="MuiSwitch-thumb"
                          />
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                      <span
                        class="MuiSwitch-track"
                      />
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Example Editor
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
